src/main/java/com/example/oms/core/error/FieldError.java
package com.example.oms.core.error;

public record FieldError(String field, String message) {
}
